--- a/Frontend/Proyecto/src/main/res/layout/fragment_detail__food.xml
+++ b/Frontend/Proyecto/src/main/res/layout/fragment_detail__food.xml
@@ -39,6 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
+                android:layout_marginLeft="15dp"
                 android:gravity="center"
                 android:text="Nombre:"
                 android:textStyle="bold" />
@@ -56,6 +57,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
                 android:gravity="center"
                 android:text="Description:"
                 android:textStyle="bold" />
@@ -73,6 +75,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
                 android:gravity="center"
                 android:text="Precio:"
                 android:textStyle="bold" />
