--- a/Frontend/Proyecto/src/main/res/layout/fragment_detail__place.xml
+++ b/Frontend/Proyecto/src/main/res/layout/fragment_detail__place.xml
@@ -1,20 +1,19 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="co.edu.udea.compumovil.gr04_20172.proyecto.views.place.Detail_Fragment_Place">
-
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scrollView"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.v7.widget.CardView
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginBottom="16dp"
             app:cardElevation="5dp"
             app:cardUseCompatPadding="true">
@@ -24,16 +23,23 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/description_place_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="13dp"
+                    android:text="texto prueba"
+                    android:textSize="25dp" />
+
                 <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvFood"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:clickable="true"
-                    android:id="@+id/rvFood"/>
+                    android:clickable="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="5dp">
-                </LinearLayout>
+                    android:layout_height="5dp"></LinearLayout>
 
                 <Button
                     android:id="@+id/map_button"
@@ -46,7 +52,6 @@
                     android:textColor="@color/white" />
 
             </LinearLayout>
-
 
 
         </android.support.v7.widget.CardView>
